--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
         "php": ">=7.4.0"
     },
     "autoload": {
-        "psr-0": { "PageObject": "." }
+        "psr-0": { "PageObject": "/src" }
     }
 }
